--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "homepage": "https://github.com/vinayannam/codereeve#readme",
     "dependencies": {
         "body-parser": "^1.18.3",
-        "express": "^4.16.3",
-        "handlebars": "^4.0.12"
+        "ejs": "^2.6.1",
+        "express": "^4.16.3"
     }
 }
