--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
         "express-handlebars": "^3.0.0",
         "express-session": "^1.15.6",
         "express-validator": "^5.3.0",
+        "glob": "^7.1.3",
+        "jssoup": "0.0.10",
         "mongodb": "^3.1.4",
         "mongoose": "^5.2.14",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "popper.js": "^1.14.4"
+        "popper.js": "^1.14.4",
+        "python-shell": "^1.0.6"
     }
 }
